--- a/EpicUltraSpeedRacer3/Config/DefaultEngine.ini
+++ b/EpicUltraSpeedRacer3/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 GlobalDefaultGameMode=/Game/Blueprints/BP_Movement.BP_Movement_C
+GameInstanceClass=/Game/Blueprints/CarSelectGameInstance.CarSelectGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
