Polishing and fixed powerups
Mushroom usage and display works, and is ready for quick extension with additional powerups (by me). Also baked in the textures for the UI and somewhat fixed the race timer discrepancy.

--- a/EpicUltraSpeedRacer3/Config/DefaultEngine.ini
+++ b/EpicUltraSpeedRacer3/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/VehicleSelectionMap.VehicleSelectionMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_Movement.BP_Movement_C
 GameInstanceClass=/Game/Blueprints/CarSelectGameInstance.CarSelectGameInstance_C
+ServerDefaultMap=/Game/Maps/VehicleSelectionMap.VehicleSelectionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
